--- a/template-app/src/app/app.component.html
+++ b/template-app/src/app/app.component.html
@@ -17,18 +17,20 @@
   </div>
 </div>
 
-<footer class="footer footer-center p-10 bg-primary text-primary-content">
-  <aside>
-    <img [src]="baseHref + '/images/logo.png'" class="inline-block h-12 w-12 rounded-full ring-2 ring-white bg-white" alt="logo">
-    <p>
-      <span class="font-bold">{{companyName}}</span>
-      <br>
-      <span>{{tagline}}</span>
-    </p>
-    <small>
-      {{companyName}} © {{currentYear}} - All rights reserved<br />
-      By the team at <a href="https://mountaintechnologiesllc.com/" class="link" target="_blank">Mountain Technologies LLC</a> -
-      <a routerLink="/license" class="link">MIT License</a>
-    </small>
-  </aside>
-</footer>
+<div class="bg-[url('{{ baseHref }}/images/footer-bg.jpg')] bg-cover bg-no-repeat bg-center text-primary-content">
+  <footer class="footer footer-center p-10 bg-primary/80">
+    <aside>
+      <img [src]="baseHref + '/images/logo.png'" class="inline-block h-12 w-12 rounded-full ring-2 ring-white bg-white" alt="logo">
+      <p>
+        <span class="font-bold">{{companyName}}</span>
+        <br>
+        <span>{{tagline}}</span>
+      </p>
+      <small>
+        {{companyName}} © {{currentYear}} - All rights reserved<br />
+        By the team at <a href="https://mountaintechnologiesllc.com/" class="link" target="_blank">Mountain Technologies LLC</a> -
+        <a routerLink="/license" class="link">MIT License</a>
+      </small>
+    </aside>
+  </footer>
+</div>
