--- a/template-app/src/app/components/sections/section-contact/section-contact.component.html
+++ b/template-app/src/app/components/sections/section-contact/section-contact.component.html
@@ -17,7 +17,7 @@
           <div>
             <h3 class="text-base font-semibold leading-7 tracking-tight">Mobile Number</h3>
             <p class="text-sm font-semibold leading-6">
-              <a href="tel:6124618256" class="link link-primary link-hover">
+              <a href="tel:{{sectionContact.phoneTel}}" class="link link-primary link-hover">
                 {{sectionContact.phoneNumber}}
               </a>
             </p>
