--- a/template-app/src/app/app.component.html
+++ b/template-app/src/app/app.component.html
@@ -17,7 +17,8 @@
   </div>
 </div>
 
-<div class="bg-[url('{{ baseHref }}/images/footer-bg.jpg')] bg-cover bg-no-repeat bg-center text-primary-content">
+<div class="bg-[url('{{ baseHref }}/images/footer-bg.jpg')] bg-cover bg-no-repeat bg-center text-primary-content"
+  style="background-image: url('/images/footer-bg.jpg');">
   <footer class="footer footer-center p-10 bg-primary/80">
     <aside>
       <img [src]="baseHref + '/images/logo.png'" class="inline-block h-12 w-12 rounded-full ring-2 ring-white bg-white" alt="logo">
