--- a/template-app/src/app/components/sections/offer-section/offer-section-offer/offer-section-offer.component.html
+++ b/template-app/src/app/components/sections/offer-section/offer-section-offer/offer-section-offer.component.html
@@ -1,6 +1,6 @@
 
 <div class="flex flex-col flex-auto w-full">
-  <div class="flex-auto card bg-base-100 border rounded-3xl xl:rounded-none"
+  <div class="flex-auto card bg-base-100 border rounded-3xl border-neutral xl:rounded-none"
   [ngClass]="
   {
     'xl:border-e-0 xl:rounded-l-3xl': isFirst == true,
