--- a/template-app/src/app/components/sections/offer-section/offer-section.component.html
+++ b/template-app/src/app/components/sections/offer-section/offer-section.component.html
@@ -1,4 +1,4 @@
-<div class="grid gap-y-12 sm:gap-y-16 md:gap-y-20 w-full xl:flex py-8 lg:py-14">
+<div class="grid gap-y-12 sm:gap-y-16 md:gap-y-20 md:py-14 w-full lg:flex py-8">
   <app-offer-section-offer [offer]="offerSection.offers[0]" [isFirst]="true"
     class="flex flex-col flex-auto w-full"></app-offer-section-offer>
 
