Rename sections from parent repo

--- a/template-app/src/app/components/sections/grid-section/grid-section.component.html
+++ b/template-app/src/app/components/sections/grid-section/grid-section.component.html
@@ -1,7 +1,7 @@
 <div class="pb-7 sm:pb-10">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-10 pt-5 sm:mt-8 sm:pt-8 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-      <article *ngFor="let col of sectionGrid.sectionGridCols" class="flex max-w-xl flex-col items-start justify-between">
+      <article *ngFor="let col of gridSection.gridColsSection" class="flex max-w-xl flex-col items-start justify-between">
         <div class="group relative">
           <h3 class="mt-3 text-lg font-semibold leading-6">
             <span class="absolute inset-0"></span>
