--- a/template-app/src/app/components/sections/text-section/text-section.component.html
+++ b/template-app/src/app/components/sections/text-section/text-section.component.html
@@ -2,10 +2,10 @@
   <div class="mx-auto max-w-7xl sm:mx-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:mx-0">
       <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">
-        {{sectionText.text}}
+        {{textSection.text}}
       </h2>
       <p class="text-base-content/70 mt-2 text-lg leading-8">
-        {{sectionText.subText}}
+        {{textSection.subText}}
       </p>
     </div>
   </div>
