--- a/template-app/src/app/components/sections/contact-section/contact-section.component.html
+++ b/template-app/src/app/components/sections/contact-section/contact-section.component.html
@@ -2,10 +2,10 @@
   <div class="mx-auto grid max-w-7xl gap-x-8 gap-y-20 px-6 lg:px-8 xl:grid-cols-3">
     <div class="max-w-2xl">
       <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">
-        {{sectionContact.text}}
+        {{contactSection.text}}
       </h2>
       <p class="text-base-content/70 mt-6 text-lg leading-8">
-        {{sectionContact.subText}}
+        {{contactSection.subText}}
       </p>
     </div>
     <ul role="list" class="grid gap-x-8 gap-y-12 sm:grid-cols-2 sm:gap-y-16 xl:col-span-2">
@@ -17,8 +17,8 @@
           <div>
             <h3 class="text-base font-semibold leading-7 tracking-tight">Mobile Number</h3>
             <p class="text-sm font-semibold leading-6">
-              <a href="tel:{{sectionContact.phoneTel}}" class="link link-primary link-hover">
-                {{sectionContact.phoneNumber}}
+              <a href="tel:{{contactSection.phoneTel}}" class="link link-primary link-hover">
+                {{contactSection.phoneNumber}}
               </a>
             </p>
           </div>
@@ -33,8 +33,8 @@
           <div>
             <h3 class="text-base font-semibold leading-7 tracking-tight">Email</h3>
             <p class="text-sm font-semibold leading-6">
-              <a href="mailto: {{sectionContact.email}}?subject=Requesting Information" class="link link-primary link-hover">
-                {{sectionContact.email}}
+              <a href="mailto: {{contactSection.email}}?subject=Requesting Information" class="link link-primary link-hover">
+                {{contactSection.email}}
               </a>
             </p>
           </div>
@@ -43,16 +43,16 @@
 
       <li>
         <div class="flex items-center gap-x-6">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" class="fill-current">
-            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
           </svg>
           <div>
             <h3 class="text-base font-semibold leading-7 tracking-tight">
-              {{sectionContact.socialName}}
+              {{contactSection.socialName}}
             </h3>
             <p class="text-sm font-semibold leading-6">
-              <a href="{{sectionContact.socialLink}}" target="_blank" class="link link-primary link-hover">
-                {{sectionContact.socialUsername}}
+              <a href="{{contactSection.socialLink}}" target="_blank" class="link link-primary link-hover">
+                {{contactSection.socialUsername}}
               </a>
             </p>
           </div>
