--- a/template-app/src/app/components/sections/main-sections/main-centered-section/main-centered-section.component.html
+++ b/template-app/src/app/components/sections/main-sections/main-centered-section/main-centered-section.component.html
@@ -1,8 +1,10 @@
 <div class="mx-auto max-w-2xl pt-20 pb-8 lg:pt-28 lg:pb-14">
   <div class="text-center">
-    <h1 class="text-4xl font-bold tracking-tight sm:text-6xl">{{sectionHeroCentered.text}}</h1>
+    <h1 class="text-4xl font-bold tracking-tight sm:text-6xl">
+      {{mainCenteredSection.text}}
+    </h1>
     <p class="text-base-content/70 mt-6 text-lg leading-8">
-      {{sectionHeroCentered.subText}}
+      {{mainCenteredSection.subText}}
     </p>
   </div>
 </div>
