--- a/template-app/src/app/components/sections/sections.component.html
+++ b/template-app/src/app/components/sections/sections.component.html
@@ -1,38 +1,38 @@
 <div *ngFor="let section of sections">
+  <div *ngIf="section.contactSection != null" [class]="defaultClasses">
+    <app-contact-section
+      [contactSection]="section.contactSection">
+    </app-contact-section>
+  </div>
+
+  <div *ngIf="section.gridSection != null" [class]="defaultClasses">
+    <app-grid-section
+      [gridSection]="section.gridSection">
+    </app-grid-section>
+  </div>
+
   <div *ngIf="section.imageHeroSection != null" class="py-1">
     <app-image-hero-section
       [imageHeroSection]="section.imageHeroSection">
     </app-image-hero-section>
   </div>
 
-  <div *ngIf="section.sectionContact != null" [class]="defaultClasses">
-    <app-section-contact
-      [sectionContact]="section.sectionContact">
-    </app-section-contact>
+  <div *ngIf="section.imageSection != null" [class]="defaultClasses">
+    <app-image-section
+      [imageSection]="section.imageSection">
+    </app-image-section>
   </div>
 
-  <div *ngIf="section.sectionGrid != null" [class]="defaultClasses">
-    <app-section-grid
-      [sectionGrid]="section.sectionGrid">
-    </app-section-grid>
+  <div *ngIf="section.mainCenteredSection != null" [class]="defaultClasses">
+    <app-main-centered-section
+      [mainCenteredSection]="section.mainCenteredSection">
+    </app-main-centered-section>
   </div>
 
-  <div *ngIf="section.sectionHeroCentered != null" [class]="defaultClasses">
-    <app-section-hero-centered
-      [sectionHeroCentered]="section.sectionHeroCentered">
-    </app-section-hero-centered>
-  </div>
-
-  <div *ngIf="section.sectionHeroWithSocialAndContact != null" [class]="defaultClasses">
-    <app-section-hero-with-social-and-contact
-      [sectionHeroWithSocialAndContact]="section.sectionHeroWithSocialAndContact">
-    </app-section-hero-with-social-and-contact>
-  </div>
-
-  <div *ngIf="section.sectionImage != null" [class]="defaultClasses">
-    <app-section-image
-      [sectionImage]="section.sectionImage">
-    </app-section-image>
+  <div *ngIf="section.mainSocialAndContactSection != null" [class]="defaultClasses">
+    <app-main-social-and-contact-section
+      [mainSocialAndContactSection]="section.mainSocialAndContactSection">
+    </app-main-social-and-contact-section>
   </div>
 
   <div *ngIf="section.offerSection != null" [class]="defaultClasses">
@@ -41,9 +41,9 @@
     </app-offer-section>
   </div>
 
-  <div *ngIf="section.sectionText != null" [class]="defaultClasses">
-    <app-section-text
-      [sectionText]="section.sectionText">
-    </app-section-text>
+  <div *ngIf="section.textSection != null" [class]="defaultClasses">
+    <app-text-section
+      [textSection]="section.textSection">
+    </app-text-section>
   </div>
 </div>
